[package]
name = "pokerup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6.2"
rusqlite = { version = "^0.31", features = ["bundled"]}
serde = { version = "^1.0", features = ["derive"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
